--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.3/wavesurfer.min.js"></script>
+     
+<div id="waveform"></div>
+<div> </div>
+<!-- Special thank you to katspaugh -->
