--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.3/wavesurfer.min.js"></script>
-     
+<html>
+     <body>     
 <div id="waveform"></div>
 <div> </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.3/wavesurfer.min.js"></script>
+</body>
+</html>
 <!-- Special thank you to katspaugh -->
