--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.3/wavesurfer.min.js"></script>
     </head>
     <body>
-
+<container>
         <div id="waveform"></div>
 
         <div style="text-align: center">
@@ -36,7 +36,7 @@
     </div>
   </p>
 </div>
-
+</container>
 </body>
 </html>
 <!-- Special thank you to katspaugh -->
