--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.3/wavesurfer.min.js"></script>
 </head>
 <body>
-<div id="waveform"></div>
+<div id="waveform">a</div>
 
 <div style="text-align: center">
 
